# django-timed-tests

./: HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
django_timed_tests/: __init__.py  runner.py
django_timed_tests/tests/: examples.py  test_settings.py  tests.py
src/django_timed_tests/: __init__.py  runner.py
tests/: examples.py  tests.py
tests/example_tests/: tests_1.py  tests_2.py  tests_25.py  tests_6.py
