[build-system]
requires = [ "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
atomic = true
line_length = 120
skip = "build,.tox"
multi_line_output = 3
include_trailing_comma = true
known_django = "django"
sections = "FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER"

[tool.coverage.run]
branch = true
source = ["django_timed_tests"]
concurrency = ["multiprocessing"]
parallel = true

[tool.coverage.report]
show_missing = true
fail_under = 100
