[metadata]
name = django-timed-tests
version = 0.1.0
description = Get timing breakdown of your Django test suite
long_description = file: README.md
long_description_content_type = text/markdown
author = Tomislav Maricevic
author_email = django_timed_tests@sorting.me
url = https://github.com/tmarice/django-timed-tests
license = MIT
classifiers =
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.0
    tabulate

[options.packages.find]
where=src

[flake8]
ignore = W503,E203
exclude = .git,__pycache__,.tox,build
max-line-length = 120
max-complexity = 10
