[metadata]
name = django-timed-tests
version = 0.1.2
description = Get timing breakdown of your Django test suite
long_description = file: README.md
long_description_content_type = text/markdown
author = Tomislav Maricevic
author_email = django_timed_tests@sorting.me
url = https://github.com/tmarice/django-timed-tests
project_urls =
        Changelog = https://github.com/tmarice/django-timed-tests/blob/master/HISTORY.md
license = MIT
classifiers =
        Environment :: Web Environment
        Framework :: Django
        Framework :: Django :: 2.0
        Framework :: Django :: 2.1
        Framework :: Django :: 2.2
        Framework :: Django :: 3.0
        Framework :: Django :: 3.1
        Framework :: Django :: 3.2
        Framework :: Django :: 4.0
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: Software Development :: Libraries :: Application Frameworks
        Topic :: Software Development :: Libraries :: Python Modules
        Topic :: Software Development :: Testing
keywords =
        django
        time
        tests


[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.0
    tabulate

[options.packages.find]
where=src

[flake8]
ignore = W503,E203
exclude = .git,__pycache__,.tox,build
max-line-length = 120
max-complexity = 10
